--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
+spring.profiles.active=dev
+
+environment=COMMON
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/addressbook_db
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:localhost:3306/addressbook_db
+spring.datasource.username=${db_username}
+spring.datasource.password=${db_password}
 spring.jpa.hibernate.ddl-auto=update
